--- a/package.json
+++ b/package.json
@@ -9,18 +9,19 @@
     "extra": "npx babel-node extra",
     "start:extra": "babel-node extra",
     "start:extraTs": "tsc-watch --project . --onSuccess \"npm run nodemon\"",
+    "start": "tsc-watch --project . --onSuccess \"npm run nodemon\"",
     "nodemon": "nodemon ./dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "./node_modules/tslint/bin/tslint -c tslint.json -p tsconfig.json --exclude 'node_modules/**/*.{j,t}s'",
     "lint:fix": "npm run lint --fix"
-    },
-    "husky": {
-      "hooks": {
-        "pre-commit": "npm run lint",
-        "pre-push": "npm run lint",
-        "...": "..."
-      }
-    },
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint",
+      "pre-push": "npm run lint",
+      "...": "..."
+    }
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Ankush-Negi/express-server.git"
@@ -39,6 +40,12 @@
     "husky": "^4.2.1",
     "tsc-watch": "^4.1.0",
     "tslint": "^6.0.0",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "dotenv": "^8.2.0"
+  },
+  "dependencies": {
+    "bootstrap": "^4.4.1",
+    "config": "^3.2.5",
+    "express": "^4.17.1"
   }
 }
