--- a/package.json
+++ b/package.json
@@ -37,13 +37,14 @@
     "@babel/node": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
     "commitizen": "^4.0.3",
+    "dotenv": "^8.2.0",
     "husky": "^4.2.1",
     "tsc-watch": "^4.1.0",
     "tslint": "^6.0.0",
-    "typescript": "^3.7.5",
-    "dotenv": "^8.2.0"
+    "typescript": "^3.7.5"
   },
   "dependencies": {
+    "@types/node": "^13.7.0",
     "bootstrap": "^4.4.1",
     "config": "^3.2.5",
     "express": "^4.17.1"
