--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "body-parser": "^1.19.0",
     "bootstrap": "^4.4.1",
     "config": "^3.2.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "router": "^1.3.4"
   }
 }
