--- a/package.json
+++ b/package.json
@@ -45,11 +45,14 @@
   },
   "dependencies": {
     "@types/express": "^4.17.2",
+    "@types/mongoose": "^5.7.1",
     "@types/node": "^13.7.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.4.1",
     "config": "^3.2.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.1",
     "router": "^1.3.4"
   }
 }
