--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.2",
+    "query-string": "^6.11.0",
     "router": "^1.3.4"
   }
 }
