--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.2",
     "query-string": "^6.11.0",
-    "router": "^1.3.4"
+    "router": "^1.3.4",
+    "swagger-jsdoc": "^3.5.0",
+    "swagger-ui-express": "^4.1.3"
   }
 }
